examples/noauth/echo-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-headless
spec:
  clusterIP: None
  selector:
    app: echo
  ports:
  - port: 3000
