examples/noauth/g5y-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: g5y-headless
spec:
  clusterIP: None
  selector:
    app: g5y
  ports:
  - name: http
    port: 8080
    targetPort: 8080
